# StepperMotors_SDK_Pipico

StepperMotor/: CHAT_COMPLETO_CONTEXTO_CODEX_CAPACIDADES.txt  CODEX_PROJECT_INTRODUCTION.txt  README_BUILD.txt
StepperMotor/FunctionBlocks/: HomeSequenceFunctionBlock.cpp  HomeSequenceFunctionBlock.h
StepperMotor/Manuals/: AdvanceMotionController.cpp_manual.txt  AdvanceMotionController.h_manual.txt  AdvanceStepperAxis.cpp_manual.txt  AdvanceStepperAxis.h_manual.txt  CHAT_COMPLETO_CONTEXTO_CODEX_CAPACIDADES.txt_manual.txt  CMakeLists.txt_manual.txt  CODEX_PROJECT_INTRODUCTION.txt_manual.txt  DefaultRecipe.cpp_manual.txt  DefaultRecipe.h_manual.txt  Ejemplo1.txt  Ejemplo2.txt  HomeSequenceFunctionBlock.cpp_manual.txt  HomeSequenceFunctionBlock.h_manual.txt  MachineRecipe.cpp_manual.txt  MachineRecipe.h_manual.txt  MotionBlock.h_manual.txt  MotionPlanner.cpp_manual.txt  MotionPlanner.h_manual.txt  MotionSystemInitializer.cpp_manual.txt  MotionSystemInitializer.h_manual.txt  README_BUILD.txt_manual.txt  README_MICROSD_RECIPE.txt_manual.txt  RecipeHomeSequence.cpp_manual.txt  RecipeHomeSequence.h_manual.txt  RecipeLoader.cpp_manual.txt  RecipeLoader.h_manual.txt  SdRecipeStorage.cpp_manual.txt  SdRecipeStorage.h_manual.txt  StepperAxisConfig.h_manual.txt  StepperPioPulseEngine.cpp_manual.txt  StepperPioPulseEngine.h_manual.txt  TrapezoidProfile.cpp_manual.txt  TrapezoidProfile.h_manual.txt  axes.txt_manual.txt  main.cpp_manual.txt  microsd_layout.txt_manual.txt  pico_sdk_import.cmake_manual.txt  serial_recipe_protocol.txt_manual.txt  stepper.pio_manual.txt
StepperMotor/Manuals/prgProgram/: ExampleSingleAxiehomeSimulated.cpp
StepperMotor/config/: README_MICROSD_RECIPE.txt
StepperMotor/config/examples/: microsd_layout.txt
StepperMotor/config/protocol/: serial_recipe_protocol.txt
StepperMotor/config/recipes/: Ejemplo1_axes.txt  Ejemplo2_axes.txt  axes.txt
StepperMotor/lib/objConfig/: DefaultRecipe.h  MachineRecipe.h  SdRecipeStorage.h
StepperMotor/lib/objMotion/: AdvanceMotionController.h  MotionBlock.h  MotionPlanner.h  TrapezoidProfile.h
StepperMotor/lib/objStepper/: AdvanceStepperAxis.h  StepperAxisConfig.h  StepperPioPulseEngine.h
StepperMotor/prgProgram/Examples/: ExampleGeneralAxieslHomeSimulated.ccp
StepperMotor/prgProject/: CMakeLists.txt  MotionSystemInitializer.cpp  MotionSystemInitializer.h  RecipeHomeSequence.cpp  RecipeHomeSequence.h  RecipeLoader.cpp  RecipeLoader.h  main.cpp  pico_sdk_import.cmake
StepperMotor/src/srcConfig/: DefaultRecipe.cpp  MachineRecipe.cpp  SdRecipeStorage.cpp
StepperMotor/src/srcMotion/: AdvanceMotionController.cpp  MotionPlanner.cpp  TrapezoidProfile.cpp
(+5 files in other folders)
